# tcp_chat

./: .gitignore  CMakeLists.txt  README.md  version.h  version.h.in
client/: CMakeLists.txt
client/data/: string.json
client/src/: main.cpp
front/: index.html  log.js  login.html  main.html  reg.html  reg.js  script.js  styles.css
include/: constants.hpp
presentation/: index.html
presentation/assets/css/: ud-styles.css
server/: CMakeLists.txt  DBManager.hpp  main.cpp  server.py  serverinfo.json
server/data/: serveraddress.json
server/include/: DB.hpp  DBManager.hpp  serverinfo.json
server/src/: DB.cpp  DBManager.cpp  client.cpp  db.hpp  main.cpp  server.cpp
